testData/inspections/inspectionSuppressor/suppressedForElement.s

*  @@@suppress_inspection@@@ M68kUnresolvedLabelReference
 bra INVALID_VALUE

<error descr="Missing matching 'endm' closing directive">brokenMacro macro</error>